force-app/main/default/objects/Audit_Log__c/Audit_Log__c.object-meta.xml
<CustomObject>
    <description>This Object is used to track field history in case an object requires more than 20 fields to be tracked which is Salesforce out of the box feature.</description>
    <label>Audit Log</label>
    <nameField>
        <displayFormat>A-{000}</displayFormat>
        <label>Audit Log Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Audit Log</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>