force-app/main/default/objects/Audit_Log__c/fields/Account_Name__c.field-meta.xml
<CustomField>
    <fullName>Account_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Represents the account associated with the audited action.</description>
    <label>Account Name</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Audit Log</relationshipLabel>
    <relationshipName>Audit_Log</relationshipName>
    <type>Lookup</type>
</CustomField>