force-app/main/default/objects/Audit_Log__c/fields/Field_Api_Name__c.field-meta.xml
<CustomField>
    <fullName>Field_Api_Name__c</fullName>
    <description>Captures the API name of the field that was affected during the audited action.</description>
    <label>Field Api Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>