force-app/main/default/objects/Audit_Log__c/fields/Field_Label__c.field-meta.xml
<CustomField>
    <fullName>Field_Label__c</fullName>
    <description>Display name of the field that underwent changes during the audited action.</description>
    <label>Field Label</label>
    <length>255</length>
    <type>Text</type>
</CustomField>