force-app/main/default/objects/Audit_Log__c/fields/Modified_Date__c.field-meta.xml
<CustomField>
    <fullName>Modified_Date__c</fullName>
    <description>Records the date and time when the audited action was performed on the specified record.</description>
    <label>Modified Date</label>
    <type>DateTime</type>
</CustomField>