force-app/main/default/objects/Audit_Log__c/fields/New_Value__c.field-meta.xml
<CustomField>
    <fullName>New_Value__c</fullName>
    <description>Represents the new value assigned to the field after the audited action.</description>
    <label>New Value</label>
    <length>255</length>
    <type>Text</type>
</CustomField>