force-app/main/default/objects/Audit_Log__c/fields/New_Value_Datetime__c.field-meta.xml
<CustomField>
    <fullName>New_Value_Datetime__c</fullName>
    <description>Indicates the date and time when the new value was assigned to the field during the audited action.</description>
    <label>New Value Datetime</label>
    <type>DateTime</type>
</CustomField>