force-app/main/default/objects/Audit_Log__c/fields/Old_Value__c.field-meta.xml
<CustomField>
    <fullName>Old_Value__c</fullName>
    <description>Captures the previous or old value of the field before the audited action.</description>
    <label>Old Value</label>
    <length>255</length>
    <type>Text</type>
</CustomField>