force-app/main/default/objects/Audit_Log__c/fields/Old_Value_Datetime__c.field-meta.xml
<CustomField>
    <fullName>Old_Value_Datetime__c</fullName>
    <description>Records the date and time when the old value was replaced during the audited action.</description>
    <label>Old Value Datetime</label>
    <type>DateTime</type>
</CustomField>