force-app/main/default/objects/Audit_Log__c/fields/Parent_Id__c.field-meta.xml
<CustomField>
    <fullName>Parent_Id__c</fullName>
    <description>Represents the parent record ID associated with the audited action.</description>
    <label>Parent Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>