force-app/main/default/objects/Audit_Log__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Field_Api_Name__c</columns>
    <columns>Old_Value__c</columns>
    <columns>New_Value__c</columns>
    <columns>Object_Name__c</columns>
    <columns>Old_Value_Datetime__c</columns>
    <columns>New_Value_Datetime__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>